tests/negative/gold/no_arg_named_test.gold
tests/negative/no_arg_named_test.toit:2:3: error: Argument mismatch for 'must'
No argument named '--no'
Required named argument '--have' not provided
  must --no
  ^~~~
tests/negative/no_arg_named_test.toit:3:3: error: Argument mismatch for 'foo'
No argument named '--foo'
Valid named arguments include '--bar'
  foo --foo
  ^~~
tests/negative/no_arg_named_test.toit:4:3: error: Argument mismatch for 'fizz'
Valid named arguments include '--bar'
Some overloads also allow arguments named '--baz'
  fizz
  ^~~~
tests/negative/no_arg_named_test.toit:5:3: error: Argument mismatch for 'fish'
Some overloads allow arguments named '--hest', '--fisk'
  fish
  ^~~~
tests/negative/no_arg_named_test.toit:6:3: error: Argument mismatch for 'block_foo'
The argument '--foo' was passed with non-block type, but must be block
  block_foo --foo=0
  ^~~~~~~~~
tests/negative/no_arg_named_test.toit:7:3: error: Argument mismatch for 'non_block_foo'
The argument '--foo' was passed with block type, but must be non-block
  non_block_foo --foo=(: 0)
  ^~~~~~~~~~~~~
tests/negative/no_arg_named_test.toit:8:3: error: Argument mismatch for 'block_unnamed'
Method does not take any non-block arguments, but one was provided
  block_unnamed 0
  ^~~~~~~~~~~~~
Compilation failed.
